fix(footer): align left copyright text

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -924,7 +924,6 @@ body
       justify-content: space-between
 
     .part
-      width: 40%
       justify-content: initial
       text-align: initial
       margin: initial
